// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckboxToggle Basic Rendering matches snapshot with label 1`] = `
<DocumentFragment>
  <label
    class="inline-flex cursor-pointer items-center"
  >
    <input
      class="peer relative h-6 w-11 rounded-full after:bg-primary data-[state=checked]:after:bg-secondary data-[state=checked]:after:border-primary after:absolute after:start-[2px] after:top-[1px] after:h-5 after:w-5 after:rounded-full after:border after:transition-all after:content-[''] data-[state=checked]:after:translate-x-full rtl:data-[state=checked]:after:-translate-x-full [&_svg]:hidden"
      data-testid="checkbox-toggle-input"
      type="checkbox"
    />
    <span
      class="ml-3 text-sm"
    >
      Test Toggle
    </span>
  </label>
</DocumentFragment>
`;

exports[`CheckboxToggle Basic Rendering matches snapshot without label 1`] = `
<DocumentFragment>
  <label
    class="inline-flex cursor-pointer items-center"
  >
    <input
      class="peer relative h-6 w-11 rounded-full after:bg-primary data-[state=checked]:after:bg-secondary data-[state=checked]:after:border-primary after:absolute after:start-[2px] after:top-[1px] after:h-5 after:w-5 after:rounded-full after:border after:transition-all after:content-[''] data-[state=checked]:after:translate-x-full rtl:data-[state=checked]:after:-translate-x-full [&_svg]:hidden"
      data-testid="checkbox-toggle-input"
      type="checkbox"
    />
  </label>
</DocumentFragment>
`;
